убрать получение всего списка из метода add